# spektacular

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  spektacular-v0.1-spec.md
.github/workflows/: build_and_deploy.yaml
.spektacular/: .gitignore  config.yaml  context.md  state.json
.spektacular/debug/: implement-prompt.md
.spektacular/specs/: 000020_context.md  000021_file-writing.md  000022_spek-knowledge-skill.md  000023_context-over-memory.md  000024_resume.md  000025_convention-aware-planning.md  000026_ripgrep-replace.md  000027_document-level-search.md  000028_knowledge-base-categories-tiers-and-dedup.md  000029_readme-refresh.md  12_autonumber_specs.md  3_testing.md  add-health-endpoint.md  spec-id-prefix-method.md  testing-with-bobs.md
.tessl/: RULES.md
cmd/: cross_kind_test.go  file.go  file_test.go  implement.go  implement_test.go  init.go  init_test.go  knowledge.go  knowledge_test.go  plan.go  plan_file.go  plan_file_test.go  plan_test.go  resume.go  resume_test.go  root.go  skill.go  spec.go  spec_test.go  storefile.go
dagger/: main.go
docs/: knowledge-base.md
internal/agent/: agent_test.go  bob.go  bob_test.go  claude.go  claude_test.go  codex.go  codex_test.go  commands.go  instruction_surface_test.go  memory_context.go  memory_context_test.go  skills.go
internal/config/: config.go  config_test.go
internal/implement/: implement.go
internal/knowledge/: category.go  (+3 more)
templates/: context_directive_test.go  plan-scaffold.md  skill_resume_test.go  work_files_test.go
tests/: test_config.py  test_plan.py  test_runner.py  test_tui.py
(+151 files in other folders)
