[project]
name = "spektacular"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.82.0",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pyyaml>=6.0.3",
]

[tool.setuptools.package-data]
spektacular = ["defaults/*.*"]
